--- a/app/src/main/res/layout/fragment_flower_view.xml
+++ b/app/src/main/res/layout/fragment_flower_view.xml
@@ -125,9 +125,11 @@
 
             <ImageButton
                 android:id="@+id/fragment_flower_search_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_weight="1"
+                android:background="@null"
+                android:tint="@color/white"
                 motion:srcCompat="@drawable/comment_back" />
 
         </LinearLayout>
