--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -19,10 +19,11 @@
             android:id="@+id/activity_loading_llayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FAFAFA"
+            android:background="@drawable/bg_loading_rounded"
             android:gravity="center"
             android:orientation="vertical"
             android:visibility="visible"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
